--- a/style.css
+++ b/style.css
@@ -2,7 +2,6 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
 }
 .left-buttons {
   display: flex;
@@ -13,31 +12,32 @@
 .right-buttons {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: left;
 }
 .stijlbutton1 {
-	height: 50%;
-	width: 20%;
+	height: 55%;
+	width: 40%;
 	background-color: lightblue;
 	box-shadow: inset 0 0 5px black; 
-	padding-bottom: 2%;
-	padding-top: 1%;
+	padding-bottom: 5%;
+	padding-right: 2.5%;
 }
 .stijlbutton2 {
-	height: 50%;
-	width: 30%;
+	height: 55%;
+	width: 40%;
 	background-color: lightblue;
 	box-shadow: inset 0 0 5px black; 
-	padding-bottom: 2%;
-	padding-top: 1%;
+	padding: 2%;
 }
 button {
-  padding: 10px 20px;
+  margin: 1%;
+  padding: 1.5%;
   font-size: 16px;
 }
 html, body{
     width: 100%;
     height: 100%;
+	overflow-x: hidden;
     margin: auto 0;
 } 
 section{
@@ -91,5 +91,110 @@ section{
     font-size: 1.5rem;
     padding: .75rem 2rem;
   }
+}
+header {
+    width: 100%;
+}
+footer {
+    margin-top: 4%;
+    background-color: #666b4c;
+    color: white;
+    width: 100%;
+    -moz-box-shadow: 0 -5px 5px #27272780;
+    -webkit-box-shadow: 0 -5px 5px #27272780;
+    box-shadow: 0 -5px 5px #27272780;
+    position: relative;
+}
+.footer-copyright {
+    background-color: rgba(22, 14, 18, 0.29);
+}
+a {
+    color: black;
+}
+
+.card-image {
+    height: 100%;
+}
+.card {
+    width: 400px;
+    margin-top: 6%;
+    height: 90%;
+}
+.card:hover {
+    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
+}
+sm {
+    background-image: url("./stijlen/afbeeldingen/sm.png");
+}
+.carousel-item {
+    height: 100vh;
+    min-height: 350px;
+    background: no-repeat center center scroll;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+}
+/* width */
+::-webkit-scrollbar {
+    width: 5px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+    background: #f1f1f1;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: #888;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: #555;
+}
+a:hover {
+    color: white;
+}
+.border-right {
+    border-right: 1px solid black;
+}
+#test {
+    text-align: left;
+
+}
+#test2 {
+    background-color: rgba(255, 255, 255, 0);
+
+}
+#test3 {
+    text-align: center;
+
+}
+}
+.een {
+    background-color: white;
+}
+.twee {
+    background-color: white;
+}
+.dropdown:hover > .dropdown-menu {
+    display: block;
+}
+li {
+    text-align: left;
+}
+p {
+    text-align: left;
+}
+th {
+    text-align: center;
+}
+thead {
+    background-color: #f0e6e6;
+}
+.red:hover{
+	color: red;
 }
 
