--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@
 .stijlbutton1 {
 	height: 55%;
 	width: 40%;
-	background-color: lightblue;
+	background-color: red;
 	box-shadow: inset 0 0 5px black; 
 	padding-bottom: 5%;
 	padding-right: 2.5%;
@@ -25,15 +25,16 @@
 .stijlbutton2 {
 	height: 55%;
 	width: 40%;
-	background-color: lightblue;
+	background-color: red;
 	box-shadow: inset 0 0 5px black; 
 	padding: 2%;
+
 }
 button {
   margin: 1%;
   padding: 1.5%;
   font-size: 16px;
-}
+ }
 html, body{
     width: 100%;
     height: 100%;
@@ -58,7 +59,6 @@ section{
   border-style: none;
   box-shadow: #ADCFFF 0 -12px 6px inset;
   box-sizing: border-box;
-  color: #000000;
   cursor: pointer;
   display: inline-block;
   font-family: -apple-system,sans-serif;
@@ -96,7 +96,7 @@ header {
     width: 100%;
 }
 footer {
-    margin-top: 6.95%;
+    margin-top: 6.65%;
     background-color: #666b4c;
     color: white;
     width: 100%;
@@ -192,9 +192,8 @@ th {
     text-align: center;
 }
 thead {
-    background-color: #f0e6e6;
+    background-color: #f0e6e6;	
 }
 .red:hover{
 	color: red;
 }
-
